--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "emilse",
+  "name": "emilse-familia",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "better-sqlite3": "^9.0.0",
+    "express": "^4.19.0"
   }
 }
